cncProd/force-app/main/default/objects/Loan_Application__c/fields/AADate__c.field-meta.xml
<CustomField>
    <fullName>AADate__c</fullName>
    <label>AADate</label>
    <type>Date</type>
</CustomField>