cncProd/force-app/main/default/objects/Loan_Application__c/fields/Amendment_No__c.field-meta.xml
<CustomField>
    <fullName>Amendment_No__c</fullName>
    <description>Amendment Number</description>
    <inlineHelpText>Amendment Number</inlineHelpText>
    <label>Amendment No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>