cncProd/force-app/main/default/objects/Loan_Application__c/fields/AmtIndicator__c.field-meta.xml
<CustomField>
    <fullName>AmtIndicator__c</fullName>
    <defaultValue>&apos;N&apos;</defaultValue>
    <label>AmtIndicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>