cncProd/force-app/main/default/objects/Loan_Application__c/fields/CustHP__c.field-meta.xml
<CustomField>
    <fullName>CustHP__c</fullName>
    <label>CustHP</label>
    <type>Phone</type>
</CustomField>