cncProd/force-app/main/default/objects/Loan_Application__c/fields/Customer_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Customer_Mobile__c</fullName>
    <description>Customer Mobile Number</description>
    <formula>Sales_Agreement__r.Mobile__c</formula>
    <label>Customer Mobile No.</label>
    <type>Text</type>
</CustomField>