cncProd/force-app/main/default/objects/Loan_Application__c/fields/Customer_NRIC__c.field-meta.xml
<CustomField>
    <fullName>Customer_NRIC__c</fullName>
    <description>Customer NRIC</description>
    <formula>Sales_Agreement__r.NRIC_Number__c</formula>
    <label>Customer NRIC</label>
    <type>Text</type>
</CustomField>