cncProd/force-app/main/default/objects/Loan_Application__c/fields/DealerID__c.field-meta.xml
<CustomField>
    <fullName>DealerID__c</fullName>
    <label>DealerID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>