cncProd/force-app/main/default/objects/Loan_Application__c/fields/Finance_Period__c.field-meta.xml
<CustomField>
    <fullName>Finance_Period__c</fullName>
    <description>In months</description>
    <formula>Sales_Agreement__r.Terms_Years__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Terms (Years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>