cncProd/force-app/main/default/objects/Loan_Application__c/fields/MaybankAccMgrName__c.field-meta.xml
<CustomField>
    <fullName>MaybankAccMgrName__c</fullName>
    <label>MaybankAccMgrName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>