cncProd/force-app/main/default/objects/Loan_Application__c/fields/OMV__c.field-meta.xml
<CustomField>
    <fullName>OMV__c</fullName>
    <formula>Sales_Agreement__r.Stock_Reservation__r.Vehicle_Master__r.OMV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OMV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>