cncProd/force-app/main/default/objects/Loan_Application__c/fields/OMVG20K__c.field-meta.xml
<CustomField>
    <fullName>OMVG20K__c</fullName>
    <label>OMV &gt; 20K ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YN</valueSetName>
    </valueSet>
</CustomField>