cncProd/force-app/main/default/objects/Loan_Application__c/fields/ReleaseLetter__c.field-meta.xml
<CustomField>
    <fullName>ReleaseLetter__c</fullName>
    <label>ReleaseLetter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>