cncProd/force-app/main/default/objects/Loan_Application__c/fields/ReleLetterPurchasePrice__c.field-meta.xml
<CustomField>
    <fullName>ReleLetterPurchasePrice__c</fullName>
    <label>ReleLetterPurchasePrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>