cncProd/force-app/main/default/objects/Loan_Application__c/fields/Sales_Agreement_No__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agreement_No__c</fullName>
    <formula>Sales_Agreement__r.SOH_SONO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Agreement No.</label>
    <type>Text</type>
</CustomField>