cncProd/force-app/main/default/objects/Loan_Application__c/fields/Status_Label__c.field-meta.xml
<CustomField>
    <fullName>Status_Label__c</fullName>
    <formula>IF( ISPICKVAL(Status__c , &apos;PCS&apos;), &apos;Pending Customer Submission&apos;, 
IF( ISPICKVAL(Status__c , &apos;AP&apos;), &apos;Approved&apos;,
IF( ISPICKVAL(Status__c , &apos;RJ&apos;), &apos;Rejected&apos;,
IF( ISPICKVAL(Status__c , &apos;CN&apos;), &apos;Cancel&apos;,
IF( ISPICKVAL(Status__c , &apos;AM&apos;), &apos;Amendment In Progress&apos;,
IF( ISPICKVAL(Status__c , &apos;PN&apos;), &apos;Preparation&apos;,
IF( ISPICKVAL(Status__c , &apos;VL&apos;), &apos;Validation In Progress&apos;,
IF( ISPICKVAL(Status__c , &apos;DP&apos;), &apos;Disbursement In Progress&apos;,
IF( ISPICKVAL(Status__c , &apos;DC&apos;), &apos;Disbursement Completed&apos;,
    TEXT(Status__c)
)))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Label</label>
    <type>Text</type>
</CustomField>