cncProd/force-app/main/default/objects/Loan_Application__c/fields/SubDateTime__c.field-meta.xml
<CustomField>
    <fullName>SubDateTime__c</fullName>
    <label>Submitted Date Time</label>
    <type>DateTime</type>
</CustomField>