cncProd/force-app/main/default/objects/Loan_Application__c/fields/Submitted_Finance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Finance_Amount__c</fullName>
    <label>Submitted Finance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>