cncProd/force-app/main/default/objects/Loan_Application__c/fields/Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Model__c</fullName>
    <formula>Sales_Agreement__r.Model__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Model</label>
    <type>Text</type>
</CustomField>