cncProd/force-app/main/default/objects/Loan_Application__c/fields/VehicleMake__c.field-meta.xml
<CustomField>
    <fullName>VehicleMake__c</fullName>
    <label>VehicleMake</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ALFA ROMEO</fullName>
            </value>
            <value>
                <fullName>ASTON MARTIN</fullName>
            </value>
            <value>
                <fullName>AUDI</fullName>
            </value>
            <value>
                <fullName>AUSTIN</fullName>
            </value>
            <value>
                <fullName>BENTLEY</fullName>
            </value>
            <value>
                <fullName>BMW</fullName>
            </value>
            <value>
                <fullName>CADILLAC</fullName>
            </value>
            <value>
                <fullName>CHERY</fullName>
            </value>
            <value>
                <fullName>CHEVROLET</fullName>
            </value>
            <value>
                <fullName>CHRYSLER</fullName>
            </value>
            <value>
                <fullName>CITROEN</fullName>
            </value>
            <value>
                <fullName>DAEWOO</fullName>
            </value>
            <value>
                <fullName>DAIHATSU</fullName>
            </value>
            <value>
                <fullName>DODGE</fullName>
            </value>
            <value>
                <fullName>DONGFENG</fullName>
            </value>
            <value>
                <fullName>FERRARI</fullName>
            </value>
            <value>
                <fullName>FIAT</fullName>
            </value>
            <value>
                <fullName>FORD</fullName>
            </value>
            <value>
                <fullName>FOTON</fullName>
            </value>
            <value>
                <fullName>GEELY</fullName>
            </value>
            <value>
                <fullName>GOLDEN DRAGON</fullName>
            </value>
            <value>
                <fullName>HAFEI</fullName>
            </value>
            <value>
                <fullName>HARLEY DAVIDSON</fullName>
            </value>
            <value>
                <fullName>HIGER</fullName>
            </value>
            <value>
                <fullName>HINO</fullName>
            </value>
            <value>
                <fullName>HONDA</fullName>
                <label>Honda</label>
            </value>
            <value>
                <fullName>HSV</fullName>
            </value>
            <value>
                <fullName>HUMMER</fullName>
            </value>
            <value>
                <fullName>HYUNDAI</fullName>
            </value>
            <value>
                <fullName>INFINITI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>